# raii-lab

./: CMakeLists.txt  Makefile  README.md  file_size_counter.cpp  lock_guard.hpp  unique_pointers.cpp
solution/: file_size_counter.cpp  lock_guard.hpp  unique_pointers.cpp
